force-app/main/default/objects/Apttus_Config2__BatchJob__c/Apttus_Config2__BatchJob__c.object-meta.xml
<CustomObject>
    <description>Represents an individual batch job</description>
    <label>Batch Job (CPQ)</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Job Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Jobs (CPQ)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>