force-app/main/default/objects/Apttus_Config2__BatchJob__c/fields/Apttus_Config2__Active__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether the job is active</description>
    <inlineHelpText>Indicates whether the job is active</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>