force-app/main/default/objects/Apttus_Config2__BatchJob__c/fields/Apttus_Config2__BatchSize__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__BatchSize__c</fullName>
    <description>The batch size</description>
    <inlineHelpText>The batch size</inlineHelpText>
    <label>Batch Size</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>