force-app/main/default/objects/Apttus_Config2__BatchJob__c/fields/Apttus_Config2__CalculationPeriod__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CalculationPeriod__c</fullName>
    <description>The period for which the rollup or rebate calculation needs to be run.Only input records that fall within the specified period will be selected for processing.</description>
    <inlineHelpText>The period for which the rollup or rebate calculation needs to be run.Only input records that fall within the specified period will be selected for processing.</inlineHelpText>
    <label>Calculation Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Default Period</fullName>
                <default>true</default>
                <label>Default Period</label>
            </value>
            <value>
                <fullName>Current Month</fullName>
            </value>
            <value>
                <fullName>Current Quarter</fullName>
            </value>
            <value>
                <fullName>Current Half Year</fullName>
            </value>
            <value>
                <fullName>Current Year</fullName>
            </value>
            <value>
                <fullName>Fixed Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>