force-app/main/default/objects/Apttus_Config2__BatchJob__c/fields/Apttus_Config2__ContextObjectId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ContextObjectId__c</fullName>
    <description>ID of the context object associated with the batch job</description>
    <externalId>true</externalId>
    <inlineHelpText>ID of the context object associated with the batch job</inlineHelpText>
    <label>Context Object Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>