force-app/main/default/objects/Apttus_Config2__BatchJob__c/fields/Apttus_Config2__Criteria__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Criteria__c</fullName>
    <description>The additional criteria used to select the input records for processing.</description>
    <inlineHelpText>The additional criteria used to select the input records for processing.</inlineHelpText>
    <label>Criteria</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>