force-app/main/default/objects/Apttus_Config2__BatchJob__c/fields/Apttus_Config2__EndTime__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__EndTime__c</fullName>
    <description>The job end time</description>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>