force-app/main/default/objects/Apttus_Config2__BatchJob__c/fields/Apttus_Config2__InputAgreementIds__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__InputAgreementIds__c</fullName>
    <description>A comma separated list of rebate agreement ids provided as input for the rebate calculation job</description>
    <inlineHelpText>A comma separated list of rebate agreement ids provided as input for the rebate calculation job</inlineHelpText>
    <label>Input Agreements</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>