force-app/main/default/objects/Apttus_Config2__BatchJob__c/fields/Apttus_Config2__InputBusinessObject__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__InputBusinessObject__c</fullName>
    <description>The business object which provides the context for the input filter</description>
    <inlineHelpText>The business object which provides the context for the input filter</inlineHelpText>
    <label>Input Business Object</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Apttus_Config2__Order__c</fullName>
                <default>true</default>
                <label>Apttus_Config2__Order__c</label>
            </value>
            <value>
                <fullName>Apttus_Config2__OrderLineItem__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>