force-app/main/default/objects/Apttus_Config2__BatchJob__c/fields/Apttus_Config2__InputRollupOrRebateIds__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__InputRollupOrRebateIds__c</fullName>
    <description>A comma separated list of rollup or rebate ids provided as input for the rollup/rebate calculation job</description>
    <inlineHelpText>A comma separated list of rollup or rebate ids provided as input for the rollup/rebate calculation job</inlineHelpText>
    <label>Input Rollups Or Rebates</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>