force-app/main/default/objects/Apttus_Config2__BatchJob__c/fields/Apttus_Config2__JobName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__JobName__c</fullName>
    <description>The batch job name</description>
    <externalId>true</externalId>
    <inlineHelpText>The batch job name</inlineHelpText>
    <label>Job Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>