force-app/main/default/objects/Apttus_Config2__BatchJob__c/fields/Apttus_Config2__JobPriority__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__JobPriority__c</fullName>
    <defaultValue>5</defaultValue>
    <description>The job priority</description>
    <inlineHelpText>The job priority</inlineHelpText>
    <label>Job Priority</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>