force-app/main/default/objects/Apttus_Config2__BatchJob__c/fields/Apttus_Config2__JobRecurrenceFrequency__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__JobRecurrenceFrequency__c</fullName>
    <description>The job recurrence frequency. For recurring jobs, this specifies how often the job should run</description>
    <inlineHelpText>The job recurrence frequency. For recurring jobs, this specifies how often the job should run</inlineHelpText>
    <label>Job Recurrence Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hourly</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>