force-app/main/default/objects/Apttus_Config2__BatchJob__c/fields/Apttus_Config2__JobRecurrenceFrequencyValue__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__JobRecurrenceFrequencyValue__c</fullName>
    <description>Indicates how frequently recurring jobs should run. e.g. Every 6 hours.</description>
    <inlineHelpText>Indicates how frequently recurring jobs should run. e.g. Every 6 hours.</inlineHelpText>
    <label>Job Recurrence Frequency Value</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>