force-app/main/default/objects/Apttus_Config2__BatchJob__c/fields/Apttus_Config2__JobRecurrenceType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__JobRecurrenceType__c</fullName>
    <description>The job recurrence type. Indicates whether the job needs to execute one time or on a recurring basis.</description>
    <inlineHelpText>The job recurrence type. Indicates whether the job needs to execute one time or on a recurring basis.</inlineHelpText>
    <label>Job Recurrence Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>One Time</fullName>
                <default>true</default>
                <label>One Time</label>
            </value>
            <value>
                <fullName>Recurring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>