force-app/main/default/objects/Apttus_Config2__BatchJob__c/fields/Apttus_Config2__JobStep__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__JobStep__c</fullName>
    <description>The job step</description>
    <label>Job Step</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>