force-app/main/default/objects/Apttus_Config2__BatchJob__c/fields/Apttus_Config2__JobType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__JobType__c</fullName>
    <description>The job type</description>
    <label>Job Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hierarchy View Update</fullName>
            </value>
            <value>
                <fullName>Hierarchy View Delete</fullName>
            </value>
            <value>
                <fullName>Criteria Update</fullName>
            </value>
            <value>
                <fullName>Rollup Update</fullName>
                <default>true</default>
                <label>Rollup Update</label>
            </value>
            <value>
                <fullName>Rebate Calculation</fullName>
            </value>
            <value>
                <fullName>Loyalty Point Calculation</fullName>
            </value>
            <value>
                <fullName>Loyalty Cycle Update</fullName>
            </value>
            <value>
                <fullName>Job Monitor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>