force-app/main/default/objects/Apttus_Config2__BatchJob__c/fields/Apttus_Config2__PeriodSource__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__PeriodSource__c</fullName>
    <description>Indicates the source field in the input business object which determines the period</description>
    <inlineHelpText>Indicates the source field in the input business object which determines the period</inlineHelpText>
    <label>Period Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>