force-app/main/default/objects/Apttus_Config2__BatchJob__c/fields/Apttus_Config2__PeriodStartDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__PeriodStartDate__c</fullName>
    <description>The fixed start date from which the input records  will be considered for rollup or rebate calculation. Only applicable for fixed calculation period.</description>
    <inlineHelpText>The fixed start date from which the input records  will be considered for rollup or rebate calculation. Only applicable for fixed calculation period.</inlineHelpText>
    <label>Period Start Date</label>
    <type>Date</type>
</CustomField>