force-app/main/default/objects/Apttus_Config2__BatchJob__c/fields/Apttus_Config2__RunDayOfWeek__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RunDayOfWeek__c</fullName>
    <description>The run day of week. Specific Day of Week when recurring weekly jobs should run.</description>
    <inlineHelpText>The run day of week. Specific Day of Week when recurring weekly jobs should run.</inlineHelpText>
    <label>Run Day Of Week</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1st Day of the Week</fullName>
            </value>
            <value>
                <fullName>2nd Day of the Week</fullName>
            </value>
            <value>
                <fullName>3rd Day of the Week</fullName>
            </value>
            <value>
                <fullName>4th Day of the Week</fullName>
            </value>
            <value>
                <fullName>5th Day of the Week</fullName>
            </value>
            <value>
                <fullName>6th Day of the Week</fullName>
            </value>
            <value>
                <fullName>7th Day of the Week</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>