force-app/main/default/objects/Apttus_Config2__BatchJob__c/fields/Apttus_Config2__StartTime__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__StartTime__c</fullName>
    <description>The job start time</description>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>