force-app/main/default/objects/Apttus_Config2__BatchJob__c/fields/Apttus_Config2__TotalNumberOfJobs__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__TotalNumberOfJobs__c</fullName>
    <description>The total number of jobs (including child jobs) associated with the batch job</description>
    <inlineHelpText>The total number of jobs (including child jobs) associated with the batch job</inlineHelpText>
    <label>Total Number Of Jobs</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>