force-app/main/default/objects/Apttus_Config2__BatchJob__c/listViews/Apttus_Config2__All.listView-meta.xml
<ListView>
    <fullName>Apttus_Config2__All</fullName>
    <columns>Apttus_Config2__JobId__c</columns>
    <columns>NAME</columns>
    <columns>Apttus_Config2__JobType__c</columns>
    <columns>Apttus_Config2__JobStep__c</columns>
    <columns>Apttus_Config2__Status__c</columns>
    <columns>Apttus_Config2__JobSpec__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>